# AegisLocal

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: __init__.py  account_utils.py  console.py  models.py  report_renderer.py  user_utils.py
data/: payloads.json
docs/superpowers/plans/: 2026-06-13-output-leak-detection.md
docs/superpowers/specs/: 2026-05-07-rich-cli-enhancements-design.md  2026-06-13-output-leak-detection-design.md
engines/: __init__.py  bom.py  dynamic_fuzzer.py  license_enrichment.py  license_policy.py  model_inventory.py  model_scanner.py  output_detectors.py  static_scanner.py
tests/: test_bom.py  test_dynamic_fuzzer.py  test_license_enrichment.py  test_license_policy.py  test_model_inventory.py  test_model_scanner.py  test_output_detectors.py  test_report.py  test_report_renderer.py  test_scan_cli.py  test_scan_modes.py  test_static_scanner.py
