[project]
name = "aegislocal"
version = "0.1.0"
description = "Local AI security CLI scanner"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
